Added html input to board.

--- a/battleship.html
+++ b/battleship.html
@@ -21,6 +21,7 @@
 
 <body>
     <div id="board">
+        <div id="messageArea"></div>
         <table>
             <tr>
                 <td id="00"></td>
@@ -95,6 +96,10 @@
                 <td id="66"></td>
             </tr>
         </table>
+        <form>
+            <input type="text" id="guessInput" placeholder="A0">
+            <input type="button" id="fireButton" value="Fire!">
+        </form>
     </div>
     <script src="battleship.js"></script>
 </body>
